name:                hbfci - Haskell Brainfuck Compiler Interpreter
version:             0.1.0.0
homepage:            https://github.com/githubuser/hbfci#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hbfc
  hs-source-dirs:      hbcf
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable hbfi
  hs-source-dirs:      hbci
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
